# QC-App-Oriented-Benchmarks

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  add_init.py  aq-qiskit.ipynb  aq-qiskit.ipynb.template  benchmarks-IQM.ipynb  benchmarks-MQT-2.ipynb  benchmarks-MQT-3.ipynb  benchmarks-MQT.ipynb  benchmarks-braket.ipynb  benchmarks-braket.ipynb.template  benchmarks-cirq.ipynb  benchmarks-cirq.ipynb.template  benchmarks-cudaq.ipynb  benchmarks-fire-opal.ipynb  benchmarks-fireopal.ipynb.template  benchmarks-projectq.ipynb.template  benchmarks-qiskit-bq.ipynb  benchmarks-qiskit-modularized-ibm-1.ipynb  benchmarks-qiskit-modularized.ipynb  benchmarks-qiskit.ipynb  benchmarks-qiskit.ipynb.template  benchmarks-qiskit.py  index.html  pyproject.toml  run_benchmark_example.py  setup.py  start_server.bat  start_server.sh  view_packages.py
_common/: __init__.py  maxcut.mplstyle  metrics.py  plots_template.mplstyle  qcb_mpi.py  qedc_init.py
_doc/: AQ.md  DESIGN_NOTES.md  POLARIZATION_FIDELITY.md  RELEASE_NOTES -2.md  RELEASE_NOTES.md  release_notes.md
_setup/: README.md
_tests/: package_test_1.bat  package_test_1.sh  package_test_1_all.bat  package_test_2.bat  package_test_2.sh  test_execute_circuits.py  test_execute_circuits_cudaq.py
about/: index.html
amplitude-estimation/: README.md
amplitude_estimation/: README.md  ae_benchmark.py
bernstein-vazirani/: README.md  bv_benchmark.py  bv_benchmark_top.py
bernstein_vazirani/: README.md  bv_benchmark.py
deutsch-jozsa/: README.md  dj_benchmark.py
deutsch_jozsa/: README.md  dj_benchmark.py
doc/: README.md  about.md  known_issues.md  make_docs.bat  mkdocs.yml  user_guide.md
grovers/: README.md  grovers_benchmark.py
hamiltonian-simulation/: README.md  hamiltonian_simulation_benchmark.py
hamiltonian_simulation/: hamiltonian_simulation_benchmark.py
hamlib/: CommutingTermsExample-TL.ipynb  DiagonalizeClifford_kcomm_clean.ipynb  Observables_generalized.ipynb  README.md  analyze_observable_methods-exp1-k-error-new-code.ipynb  analyze_observable_methods-exp1-k-group-new-code.ipynb  analyze_observable_methods-exp2-a-new-code.ipynb  analyze_observable_methods-exp2-b-new-code.ipynb  analyze_observable_methods.ipynb  benchmark-hamsim-observables.ipynb  benchmark_hamlib_evolution.ipynb  benchmark_hamlib_fidelities.ipynb  benchmark_hamlib_fidelities_cudaq.ipynb  benchmark_hamlib_gsee_vqe.ipynb  benchmark_hamlib_observables.ipynb  benchmark_hamlib_observables_cudaq.ipynb  benchmark_hamlib_observables_custom-group.ipynb  benchmark_hamlib_observables_custom.ipynb  benchmark_hamlib_plots.ipynb  benchmark_hamlib_transitions.ipynb  benchmarks-qiskit-observables.ipynb  generate_measurement_circuits.py  generate_pauli_groups.py  hamlib-benchmarks-qiskit.ipynb  hamlib-vqe-example-clean.ipynb  hamlib_fidelity_benchmarks.ipynb  hamlib_observable_benchmarks.ipynb  hamlib_simulation_benchmark.py  test_hamlib_observable_functions_1.ipynb  test_hamlib_observable_functions_2.ipynb  test_hamlib_simulations_all.ipynb  test_hamlib_simulations_all_paper.ipynb  test_observables_generalized.ipynb
hhl/: README.md  hhl_benchmark.py
hidden-shift/: README.md  hs_benchmark.py
hidden_shift/: README.md  hs_benchmark.py
hydrogen-lattice/: README.md
hydrogen_lattice/: README.md  hydrogen_lattice_benchmark.py
image-recognition/: README.md
image_recognition/: README.md  image_recognition_benchmark.py
issues_cudaq_mgpu/: index.html
qedclib/: README.md  __init__.py  _init_engine.py  api.py  batched.py  job_store.py  metrics.py  pyproject.toml  qcb_mpi.py  qedc_init.py
qedclib/_dev/: RELEASE.md  build_pypi.bat  build_pypi.sh  build_pypi_qedcbench.bat  build_pypi_qedcbench.sh
qedclib/_tests/: 01_basic_api.py  02_parameter_sweep.py  03_backend_switching.py  04_batch_scaling.py  05_submit_with_metrics.py  11_execute_parallel.py  12_execute_groups_parallel.py  14_execute_parameterized.py  README.md
qedclib/cirq/: execute.py
qedclib/cudaq/: execute.py
qedclib/executors/: cuquantum_executor.py
qedclib/ocean/: HamiltonianCircuitProxy.py  execute.py
qedclib/qiskit/: benchmark_runner.py  execute.py  execute_parallel.py
qedclib/qiskit/parallel_experiment/HA/: .gitignore  README.md
qedclib/qiskit/parallel_experiment/HA/src/: 4gt5_75.qasm  IBMQSubmitter.py  alu-v0_27.qasm  test.py
qedclib/qiskit/parallel_experiment/HA/src/hamap/: __init__.py  _circuit_manipulation.py  distance_matrix.py  extended_dag.py  gates.py  heuristics.py  initial_mapping.py  layer.py  mapping.py  mapping_to_str.py  swap.py
qedclib/qiskit/parallel_experiment/HA/src/hamap/_cli/: __init__.py  compare_initial_mappings.py  compare_swap_bridge.py  initial_mappings_compare.py  initial_mappings_compare_our.py  sabre_iteration.py
qedclib/qiskit/parallel_experiment/HA/src/hamap/hardware/: HardwareArchitecture.py  IBMQHardwareArchitecture.py  __init__.py
qedclib/qiskit/parallel_experiment/HA/src/hamap/initial_mapping_generator/: filename.qasm  initial_mapping_example_sy.py
qedclib/qiskit/parallel_experiment/HA/src/hamap/optimisation/: simulated_annealing.py
qedclib/qiskit/parallel_experiment/src/: find_initial_mapping.py  run_parallel_experiment.py
qedclib/qiskit/parallel_experiment/src/benchmarks/multiprogramming/: 3_17_13.qasm  4gt13-v1_93.qasm  4gt13_92.qasm  4mod5-v1_22.qasm  alu-v0_27.qasm  decod24-v2_43.qasm  mod5d2_64.qasm  mod5mils_65.qasm
qedclib/qiskit/parallel_experiment/src/hardware/: HardwareArchitecture.py  IBMQHardwareArchitecture.py  __init__.py  distance_matrx.py  partition_distance_matrix.py
qedclib/qiskit/parallel_experiment/src/mapping/: _circuit_manipulation.py  _mapping_to_str.py  gates.py  initial_mapping_construct.py  initial_mapping_wrapper.py  iterative_mapping.py  layer.py  mapping_transition.py  swap.py  swap_heuristics.py
qedclib/qiskit/parallel_experiment/src/partition_process/: partition.py  qubit_partition.py
qedclib/qiskit/parallel_experiment/src/tools/: IBMQSubmitter.py  IBMQSubmitter2.py  read_circuit.py  submit.py  submit2.py
qedclib/transformers/: qiskit_passmgr.py
(+1180 files in other folders)
