[project]
name = "qedcbench"
version = "2.0.0"
description = "QED-C Application-Oriented Quantum Computing Benchmarks and Execution Library"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qedclib*", "qedcbench*", "_common*"]
exclude = ["__pycache__*"]
