[project]
name = "qedcbench"
version = "2.0.6"
description = "QED-C Application-Oriented Quantum Computing Benchmarks and Execution Library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Thomas Lubinski"},
    {name = "Quantum Economic Development Consortium (QED-C) Standards TAC"},
]
maintainers = [
    {name = "Thomas Lubinski"},
]
keywords = ["quantum computing", "benchmarks", "qiskit", "cuda-q", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/SRI-International/QC-App-Oriented-Benchmarks"
Documentation = "https://sri-international.github.io/QC-App-Oriented-Benchmarks/"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qedclib*", "qedcbench*"]
exclude = ["__pycache__*"]

[tool.setuptools.package-data]
qedcbench = ["**/_common/**/*.json", "**/_common/**/*.txt", "**/_common/**/*.sol", "**/*.mplstyle"]
qedclib = ["**/*.mplstyle"]
