[project]
name = "qedclib"
version = "2.0.0"
description = "Quantum program execution engine with built-in performance monitoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Quantum Economic Development Consortium (QED-C)"}]
keywords = ["quantum computing", "execution engine", "benchmarks", "metrics", "qiskit", "cuda-q"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/SRI-International/QC-App-Oriented-Benchmarks"
Documentation = "https://sri-international.github.io/QC-App-Oriented-Benchmarks/"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qedclib*"]
